solution and comments for day5 part1